--- a/language-fortran.cabal
+++ b/language-fortran.cabal
@@ -36,3 +36,13 @@ library
 
   hs-source-dirs:      src
   build-tools: alex, happy
+
+test-suite tests
+  Type:            exitcode-stdio-1.0
+  hs-source-dirs:  tests
+  Main-is:         Test.hs
+  Other-modules:
+  Build-depends:
+    base >=3 && < 5,
+    tasty,
+    tasty-hunit
